# MercuryEngine.Data

./: .editorconfig  .gitignore  .gitmodules  Directory.Build.props  LICENSE  MercuryEngine.Data.sln  MercuryEngine.Data.sln.DotSettings  README.md  version.json
.github/workflows/: mdlconvert-release.yml
src/MercuryEngine.Data.TegraTextureLib/: BCnDecoder.cs  BaseDataFormat.cs  Bctex.cs  BlockDim.cs  Cargo.toml  DEPENDENCIES-LICENSE.txt  FormatInfo.cs  ImageFormatTable.cs  MercuryEngine.Data.TegraTextureLib.csproj  SwizzleUtility.cs  TegraSwizzle.cs  TegraTexture.cs  TextureImageFormat.cs  Xtx.cs  XtxImageFormat.cs  build.rs  build_linux.sh  build_windows.ps1
src/MercuryEngine.Data.TegraTextureLib/Extensions/: LinqExtensions.cs  StreamExtensions.cs  XtxFormatExtensions.cs
src/MercuryEngine.Data.TegraTextureLib/Formats/: BaseDataFormat.cs  Bctex.cs  MseTextureEncoding.cs  MseTextureKind.cs  TextureUsage.cs  Xtx.cs  XtxBlockType.cs  XtxDataBlock.cs  XtxTextureInfo.cs
src/MercuryEngine.Data.TegraTextureLib/ImageProcessing/: BC67ModeInfo.cs  BC67Tables.cs  BC67Utils.cs  BC6Decoder.cs  BCnDecoder.cs  BlockDim.cs  EncodingBlock.cs  FormatInfo.cs  ImageFormatTable.cs  RgbaColor32.cs  RgbaColor8.cs  SwizzleUtility.cs  TegraSwizzle.cs  TegraTexture.cs  TextureEncodingOptions.cs  TextureImageFormat.cs  XtxImageFormat.cs
src/MercuryEngine.Data.TegraTextureLib/Native/: TegraSwizzle.g.cs
src/MercuryEngine.Data.TegraTextureLib/Utility/: BitUtils.cs  MemoryOwner.cs
src/MercuryEngine.Data.TegraTextureLib/src/: lib.rs  libold.rs
test/: Directory.Build.props
(+632 files in other folders)
